# aaugs-code

./: Cargo.toml  install.sh
.github/workflows/: rust.yml
src/: chat.rs  cli.rs  config.rs  cost.rs  init.rs  main.rs  router.rs  sandbox.rs  system_prompt.md  term.rs  tui.rs  tui_app.rs  update.rs
src/llm/: anthropic.rs  gemini.rs  message.rs  mod.rs  openai.rs
src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  question.rs  read.rs  write.rs
src/tui/: browse.rs  chat.rs  help.rs  markdown.rs  mod.rs  palette.rs
