[package]
name = "aaugs-code"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
regex = "1"
glob = "0.3"
termimad = "0.31"
atty = "0.2"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.29"
